🚧 Advance textarea flexbox

--- a/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.scss
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.scss
@@ -1,61 +1,55 @@
-
-.step-title{
+.step-title {
     font-size: 1.3em;
     font-weight: bold;
 }
 
-.container{
-    &__form{
-        &--input{
+.container {
+    &__form {
+        &--input {
             width: 430px;
-
         }
     }
-
-    .container__title{
+    .container__title {
         font-weight: bold;
-
     }
-
-    .container__result{
-        display: flex;       
-       
+    .container__result {
+        display: flex;
     }
 }
 
-.form-corrective{
-
-    &__input1{
+.form-corrective {
+    &__input1 {
         width: 260px;
-        margin-right: 15px; 
+        margin-right: 15px;
     }
-    &__input2{
+    &__input2 {
         width: 160px;
         margin-right: 15px;
     }
-    &__btn-add{
+    &__btn-add {
         margin-top: 15px;
     }
-
-    &__btn-delete{
-
+    &__btn-delete {}
+    &__container {
+        display: flex;
+        align-items: flex-start;
     }
 }
 
-.link-text{
+.link-text {
     color: #0064EA;
 }
 
-.chip-form-input{
+.chip-form-input {
     width: 550px;
 }
 
-.step-text{
+.step-text {
     font-weight: bold;
     font-size: 1.2em;
 }
 
-.btn-result-1{
+.btn-result-1 {
     background: #FFFFFF;
     color: #2B2B2B;
     border: black 1px solid;
@@ -65,8 +59,9 @@
     font-size: 1.5em;
     font-weight: bold;
 }
-.btn-result-2{
-    background:#FDCF41;
+
+.btn-result-2 {
+    background: #FDCF41;
     color: #2B2B2B;
     margin-left: 190px;
     border-radius: 5px;
@@ -75,7 +70,8 @@
     font-size: 1.5em;
     font-weight: bold;
 }
-.btn-result-3{
+
+.btn-result-3 {
     background: #F28421;
     color: white;
     margin-left: 190px;
@@ -85,7 +81,8 @@
     font-size: 1.5em;
     font-weight: bold;
 }
-.btn-result-4{
+
+.btn-result-4 {
     background: #FF2D2D;
     color: white;
     margin-left: 190px;
@@ -95,8 +92,9 @@
     font-size: 1.5em;
     font-weight: bold;
 }
-.btn-result-5{
-    background:green ;
+
+.btn-result-5 {
+    background: green;
     color: white;
     margin-left: 190px;
     border-radius: 5px;
