--- a/src/app/main/pages/quality/analysis/results/results.component.html
+++ b/src/app/main/pages/quality/analysis/results/results.component.html
@@ -1,7 +1,6 @@
 <div>
     <div class="ms-kanban-toolbar mat-elevation-z4">
-        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input"
-            [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
+        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input" [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
             <mat-label>FECHA/PERIODO</mat-label>
             <mat-date-range-input [formGroup]="dateForm" [rangePicker]="picker">
                 <input readonly matStartDate formControlName="start" placeholder="Fecha Inicio">
@@ -11,8 +10,7 @@
             <mat-date-range-picker #picker></mat-date-range-picker>
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input"
-            [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
+        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input" [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
             <mat-icon matPrefix>location_on</mat-icon>
             <mat-select [formControl]="eventTypeControl">
                 <mat-option value="">Todos los eventos</mat-option>
@@ -22,8 +20,7 @@
             </mat-select>
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input"
-            [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
+        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input" [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
             <mat-icon matPrefix>location_on</mat-icon>
             <mat-select [formControl]="statusControl">
                 <mat-option value="">Todos los estados</mat-option>
@@ -33,23 +30,18 @@
             </mat-select>
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input"
-            [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
+        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input" [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
             <mat-label>Taller</mat-label>
             <mat-icon matPrefix>business</mat-icon>
             <input matInput type="text" [formControl]="workShopControl" placeholder="Taller" autocomplete="off">
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input"
-            [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
+        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input" [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
             <mat-icon matPrefix>search</mat-icon>
             <input matInput type="text" [formControl]="searchControl" placeholder="Escribir" autocomplete="off">
         </mat-form-field>
         <span class="ms-fill"></span>
-        <button mat-button class="ms-kanban-toolbar__button"
-            *ngIf="authService.uiConfig.quality.analysis.tabs.results.toolbar.download"
-            [ngClass]="isMobile ? 'ms-kanban-toolbar__button--mobile' : 'ms-kanban-toolbar__button--desktop'"
-            (click)="download()">
+        <button mat-button class="ms-kanban-toolbar__button" *ngIf="authService.uiConfig.quality.analysis.tabs.results.toolbar.download" [ngClass]="isMobile ? 'ms-kanban-toolbar__button--mobile' : 'ms-kanban-toolbar__button--desktop'" (click)="download()">
             <mat-icon matPrefix>download</mat-icon>
             DESCARGAR
         </button>
@@ -58,9 +50,9 @@
     <div class="container-body">
         <!-- <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar> -->
         <div class="container-table" *ngIf="this.quality$ |async">
-            <table mat-table [dataSource]="settingsDataSource">
+            <table mat-table [dataSource]="settingsDataSource" matSort>
 
-                <ng-container matColumnDef="date">
+                <ng-container matColumnDef="date" sticky>
                     <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Fecha </th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
                         {{(element.createdAt.seconds * 1000) | date : 'dd/MM/yy'}}
@@ -69,72 +61,68 @@
                     </td>
                 </ng-container>
 
-                <ng-container matColumnDef="eventType">
+                <ng-container matColumnDef="eventType" sticky>
                     <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Tipo de evento </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.eventType }} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="workOrder">
+                <ng-container matColumnDef="workOrder" sticky>
                     <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Orden de trabajo </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workOrder}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="component">
+                <ng-container matColumnDef="component" sticky>
                     <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Componente </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.component }} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="numberPart">
-                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Nro de parte </th>
+                <ng-container matColumnDef="numberPart" sticky>
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader" mat-sort-header> Nro de parte </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.partNumber}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="workShop">
+                <ng-container matColumnDef="workShop" sticky>
                     <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Taller </th>
-                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workShop? element.workShop:
-                        '-'}} </td>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workShop? element.workShop: '-'}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="miningOperation">
-                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Operación minera </th>
-                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.miningOperation?
-                        element.miningOperation: '-'}} </td>
+                <ng-container matColumnDef="miningOperation" sticky>
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader" mat-sort-header> Operación minera </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.miningOperation? element.miningOperation: '-'}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="specialist">
+                <ng-container matColumnDef="specialist" sticky>
                     <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Especialista </th>
-                    <td mat-cell *matCellDef="let element" align="center" class="table__cell"> {{element.specialist ?
-                        element.specialist.name :'-'}}
+                    <td mat-cell *matCellDef="let element" align="center" class="table__cell"> {{element.specialist ? element.specialist.name :'-'}}
                     </td>
                 </ng-container>
 
-                <ng-container matColumnDef="accCorrective">
+                <ng-container matColumnDef="accCorrective" sticky>
                     <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Acc. Correctivas </th>
-                    <td mat-cell *matCellDef="let element" class="table__cell">{{element.taskDone }}/
-                        {{element.correctiveActions.length }} </td>
+                    <td mat-cell *matCellDef="let element" class="table__cell">{{element.taskDone }}/ {{element.correctiveActions.length }} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="causeFailure">
+                <ng-container matColumnDef="causeFailure" sticky>
                     <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Causante de falla</th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
                         {{element.analysis ?element.analysis.causeFailure :'-' }} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="process">
+                <ng-container matColumnDef="process" sticky>
                     <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Proceso </th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
                         {{element.analysis ? element.analysis.process : '-' }} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="riskLevel">
+                <ng-container matColumnDef="riskLevel" sticky>
                     <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Nivel de riesgo </th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
                         {{element.evaluationAnalysisName? element.evaluationAnalysisName: '-'}}
                     </td>
                 </ng-container>
 
-                <ng-container matColumnDef="user">
-                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Usuario</th>
+                <ng-container matColumnDef="user" sticky>
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader" mat-sort-header> Usuario</th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.createdBy.name}} </td>
                 </ng-container>
 
@@ -143,7 +131,7 @@
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.state}} </td>
                 </ng-container> -->
 
-                <ng-container matColumnDef="state">
+                <ng-container matColumnDef="state" sticky>
                     <th mat-header-cell *matHeaderCellDef class="table__cell theader">Estado</th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
                         <button mat-button [ngClass]="{
@@ -165,34 +153,22 @@
                     <td mat-cell *matCellDef="let element; let i = index" class="table__cell">
                         <ng-container>
                             <mat-menu #rawMenu="matMenu">
-                                <button mat-menu-item
-                                    *ngIf="authService.uiConfig.quality.analysis.tabs.results.actions.correctiveActions"
-                                    (click)="accCorrective(element)">
+                                <button mat-menu-item *ngIf="authService.uiConfig.quality.analysis.tabs.results.actions.correctiveActions" (click)="accCorrective(element)">
                                     <mat-icon>fact_check</mat-icon> Acc Correctivas
                                 </button>
-                                <button mat-menu-item
-                                    *ngIf="authService.uiConfig.quality.analysis.tabs.results.actions.details"
-                                    (click)="detailDialog(element, element.eventType)">
+                                <button mat-menu-item *ngIf="authService.uiConfig.quality.analysis.tabs.results.actions.details" (click)="detailDialog(element, element.eventType)">
                                     <mat-icon>visibility</mat-icon> Detalle
                                 </button>
-                                <button mat-menu-item
-                                    *ngIf="authService.uiConfig.quality.analysis.tabs.results.actions.report"
-                                    (click)="printPdf(element)">
+                                <button mat-menu-item *ngIf="authService.uiConfig.quality.analysis.tabs.results.actions.report" (click)="printPdf(element)">
                                     <mat-icon>picture_as_pdf</mat-icon> Reporte
                                 </button>
-                                <button mat-menu-item
-                                    *ngIf="authService.uiConfig.quality.analysis.tabs.results.actions.timeLine"
-                                    (click)="timeline(element)">
+                                <button mat-menu-item *ngIf="authService.uiConfig.quality.analysis.tabs.results.actions.timeLine" (click)="timeline(element)">
                                     <mat-icon>timeline</mat-icon> Línea de tiempo
                                 </button>
-                                <button mat-menu-item
-                                    *ngIf="authService.uiConfig.quality.analysis.tabs.results.actions.edit"
-                                    (click)="edit(element, element.eventType)">
+                                <button mat-menu-item *ngIf="authService.uiConfig.quality.analysis.tabs.results.actions.edit" (click)="edit(element, element.eventType)">
                                     <mat-icon>edit</mat-icon>Editar
                                 </button>
-                                <button mat-menu-item
-                                    *ngIf="authService.uiConfig.quality.analysis.tabs.results.actions.delete"
-                                    (click)="deleteQuality(element)">
+                                <button mat-menu-item *ngIf="authService.uiConfig.quality.analysis.tabs.results.actions.delete" (click)="deleteQuality(element)">
                                     <mat-icon>delete</mat-icon>Borrar
                                 </button>
 
