--- a/src/app/main/pages/quality/internal-events/internal-events.component.scss
+++ b/src/app/main/pages/quality/internal-events/internal-events.component.scss
@@ -3,12 +3,12 @@
 }
 
 .container-title {
-    display: flex;
+    display       : flex;
     flex-direction: row;
-    margin-top: 10px;
+    margin-top    : 10px;
 
     &__name {
-        font-size: 2.2em;
+        font-size  : 2.2em;
         margin-left: 20px;
         font-family: "Poppins", sans-serif;
         font-weight: 700;
@@ -17,25 +17,25 @@
 
 .card {
     max-width: 650px;
-    padding: 24px;
+    padding  : 24px;
 }
 
 .title-form {
-    font-size: 1.3em;
+    font-size  : 1.3em;
     font-weight: 500;
-    color: slategray;
+    color      : slategray;
 }
 
 .container-form {
-    display: flex;
+    display       : flex;
     flex-direction: column;
 
     &__work {
-        display: flex;
+        display  : flex;
         flex-wrap: wrap;
 
         &__input {
-            width: 100%;
+            width    : 100%;
             max-width: 290px;
 
             &--desktop {
@@ -49,7 +49,7 @@
     }
 
     &__area {
-        width: 100%;
+        width    : 100%;
         max-width: 605px;
 
         &--desktop {
@@ -63,50 +63,52 @@
 
     &__title {
         font-weight: 500;
-        color: slategray;
+        color      : slategray;
     }
 
     &__uploadXlx {
         &--btn-add {
-            border: 1px #6200ee solid;
-            color: #6200ee;
+            border : 1px #6200ee solid;
+            color  : #6200ee;
             padding: 5px 30px 5px 30px;
         }
     }
 
     &__btn-save {
-        background: #6200ee;
-        margin-right: 100px;
-        color: white;
-        padding: 5px 30px 5px 30px;
+        background    : #6200ee;
+        margin-right  : 100px;
+        color         : white;
+        padding       : 5px 30px 5px 30px;
         letter-spacing: 0.5px;
-        width: 100%;
-        margin-top: 16px;
+        width         : 100%;
+        margin-top    : 16px;
     }
 }
 
 .dropzone {
-    display: flex;
-    align-items: center;
+    display        : flex;
+    align-items    : center;
     justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    max-width: 605px;
-    font-weight: 200;
-    height: 100px;
-    border: 2px dashed #6200ee;
-    border-radius: 5px;
-    background: white;
-    margin: 10px 0;
+    flex-direction : column;
+    width          : 100%;
+    max-width      : 605px;
+    font-weight    : 200;
+    height         : 100px;
+    border         : 2px dashed #6200ee;
+    border-radius  : 5px;
+    background     : white;
+    margin         : 10px 0;
 }
 
 .dropzone.hovering {
     border: 2px solid #6200ee;
-    color: #dadada !important;
+    color : #dadada !important;
 }
+
 .dropzone .file-label {
     font-size: 1.2em;
 }
+
 progress::-webkit-progress-value {
     transition: width 0.1s ease;
 }
@@ -117,34 +119,46 @@ progress::-webkit-progress-value {
 
 .file-cta,
 .file-name {
-    border-color: #dbdbdb;
+    border-color : #dbdbdb;
     border-radius: 4px;
-    font-size: 1em;
-    white-space: nowrap;
+    font-size    : 1em;
+    white-space  : nowrap;
 }
+
 .file-cta {
     background-color: #f5f5f5;
-    color: #4a4a4a;
+    color           : #4a4a4a;
 }
 
 .file-cta,
 .file-name,
 .input {
-    -moz-appearance: none;
+    -moz-appearance   : none;
     -webkit-appearance: none;
-    align-items: center;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    box-shadow: none;
-    display: inline-flex;
-    font-size: 1rem;
-    height: 2.25em;
-    justify-content: flex-start;
-    line-height: 1.5;
-    padding-bottom: calc(0.375em - 1px);
-    padding-left: calc(0.625em - 1px);
-    padding-right: calc(0.625em - 1px);
-    padding-top: calc(0.375em - 1px);
-    position: relative;
-    vertical-align: top;
+    align-items       : center;
+    border            : 1px solid transparent;
+    border-radius     : 4px;
+    box-shadow        : none;
+    display           : inline-flex;
+    font-size         : 1rem;
+    height            : 2.25em;
+    justify-content   : flex-start;
+    line-height       : 1.5;
+    padding-bottom    : calc(0.375em - 1px);
+    padding-left      : calc(0.625em - 1px);
+    padding-right     : calc(0.625em - 1px);
+    padding-top       : calc(0.375em - 1px);
+    position          : relative;
+    vertical-align    : top;
+}
+
+
+
+.div-margin {
+    display: flex;
+    flex-direction: row;
+    &__margin-space{
+        margin-top : 3px;
+        margin-left: 10px;
+    }
 }
