--- a/src/app/main/pages/quality/analysis/results/results.component.scss
+++ b/src/app/main/pages/quality/analysis/results/results.component.scss
@@ -1,24 +1,20 @@
-
-.container-header{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 0px;
-
-  &__search{
-
-  }
-  &__downlad{
-    border: 1px solid #6200EE;
-    color: #6200EE;
-    background: white;
-    padding: 0px 20px ;
-    margin: 10px 20px 30px;
-  }
+.container-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0px;
+    &__search {}
+    &__downlad {
+        border: 1px solid #6200EE;
+        color: #6200EE;
+        background: white;
+        padding: 0px 20px;
+        margin: 10px 20px 30px;
+    }
 }
 
-.container-body{
-  margin-top: 0px;
+.container-body {
+    margin-top: 0px;
 }
 
 .container-table {
@@ -35,6 +31,12 @@ table {
     }
 }
 
+.table-wrapper {
+    overflow: auto;
+    max-height: 80vh;
+    margin-top: 1.5em;
+}
+
 .theader {
     background: #f0eefc;
     color: #2b2b2b;
@@ -48,24 +50,22 @@ table {
     background: #F2C94C;
     color: black;
     width: 130px;
-  }
-  
-  .btn-state-process {
-    background:  #FF2D2D;
+}
+
+.btn-state-process {
+    background: #FF2D2D;
     color: white;
     width: 130px;
-  }
+}
 
-  .btn-state-tracing {
+.btn-state-tracing {
     background: #f2994a;
     color: white;
     width: 130px;
-  }
+}
 
-  .btn-state-finalizado {
+.btn-state-finalizado {
     background: #27ae60;
     color: white;
     width: 130px;
-  }
-  
-  
+}
