:art: :hammer: Finish ad fields

--- a/src/app/main/pages/quality/internal-events/internal-events.component.html
+++ b/src/app/main/pages/quality/internal-events/internal-events.component.html
@@ -98,10 +98,50 @@
                         Campo <strong>requerido.</strong>
                     </mat-error>
                 </mat-form-field>
-                <div class="div-margin">
+
+                <div class="div-margin" autocomplete="off">
                     <h3 class="container-form__title">¿Esta pararalizando el trabajo?</h3>
-                    <mat-checkbox class="div-margin__margin-space">
-                    </mat-checkbox>
+                    <mat-checkbox class="div-margin__margin-space" [checked]="allCompleteField"
+                        (change)="setFields($event.checked)"></mat-checkbox>
+                </div>
+
+                <div *ngIf="allCompleteField">
+                    <mat-form-field class="container-form__work__input"
+                        [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'"
+                        appearance="outline">
+                        <mat-label>¿En que taller se detecto el problema?</mat-label>
+                        <input autocomplete="off" type="text" matInput [formControl]="workShopName"
+                            [matAutocomplete]="auto1">
+                        <mat-autocomplete #auto1="matAutocomplete" [displayWith]="displayFn" autoActiveFirstOption
+                            (optionSelected)="setSelectedArea($event)">
+                            <mat-option *ngFor="let option of filteredOptionsWorkShopName$ | async" [value]="option">
+                                {{option.workShopName}}
+                            </mat-option>
+                        </mat-autocomplete>
+                        <mat-error *ngIf="workShopName.hasError('required') && workShopName.touched">
+                            Campo <strong>requerido.</strong>
+                        </mat-error>
+
+                    </mat-form-field>
+
+                    <mat-form-field class="container-form__work__input"
+                        [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'"
+                        appearance="outline">
+                        <mat-label>¿En que proceso se detecto este evento?</mat-label>
+                        <input autocomplete="off" type="text" matInput [formControl]="workShopProgress"
+                            [matAutocomplete]="auto2">
+                        <mat-autocomplete #auto2="matAutocomplete" autoActiveFirstOption>
+                            <mat-option *ngFor="let option of  filteredOptionsWorkShopProgress$ | async"
+                                [value]="option">
+                                {{option}}
+                            </mat-option>
+                        </mat-autocomplete>
+                        <mat-error *ngIf="workShopProgress.hasError('required') && workShopProgress.touched">
+                            Campo <strong>requerido.</strong>
+                        </mat-error>
+
+                    </mat-form-field>
+
                 </div>
 
                 <div class="dropzone" appDropzone (hovered)="toggleHoverGeneral($event)"
@@ -167,12 +207,10 @@
                         ADJUNTAR
                     </button>
                 </div>
-
-                <button aria-label="add" mat-button class="container-form__btn-save" [disabled]='internalForm.invalid'
+                <button aria-label="add" mat-button class="container-form__btn-save" [disabled]='internalForm.invalid || workShopName.invalid || workShopProgress.invalid'
                     (click)="save()">
                     GUARDAR
                 </button>
-
             </form>
         </mat-card>
     </div>
