:art: Actualizar formato de targetas dd /hh:mm
Actualizar diseño de tarjetas con nuevo formato de timer: DD / HH / MM

--- a/src/app/main/pages/quality/analysis/progress/progress.component.html
+++ b/src/app/main/pages/quality/analysis/progress/progress.component.html
@@ -89,8 +89,8 @@
         <div class="progress-view">
           {{item.processTimeElapsed?.days | number : '2.'}} /
           {{item.processTimeElapsed?.hours | number : '2.'}} :
-          {{item.processTimeElapsed?.minutes | number : '2.'}} :
-          {{item.processTimeElapsed?.seconds | number : '2.'}}
+          {{item.processTimeElapsed?.minutes | number : '2.'}} 
+          <!--: {{item.processTimeElapsed?.seconds | number : '2.'}} -->
         </div>
       </div>
     </div>
