--- a/src/app/main/pages/quality/analysis/records/records.component.html
+++ b/src/app/main/pages/quality/analysis/records/records.component.html
@@ -80,8 +80,8 @@
         <div class="progress-view">
           {{item.registryTimeElapsed?.days | number : '2.'}} /
           {{item.registryTimeElapsed?.hours | number : '2.'}} :
-          {{item.registryTimeElapsed?.minutes | number : '2.'}} :
-          {{item.registryTimeElapsed?.seconds | number : '2.'}}
+          {{item.registryTimeElapsed?.minutes | number : '2.'}} 
+          <!-- :{{item.registryTimeElapsed?.seconds | number : '2.'}} -->
         </div>
       </div>
     </div>
