--- a/src/app/main/pages/quality/analysis/tracing/tracing.component.html
+++ b/src/app/main/pages/quality/analysis/tracing/tracing.component.html
@@ -90,8 +90,8 @@
         <div class="progress-view">
           {{item.tracingTimeElapsed?.days | number : '2.'}} /
           {{item.tracingTimeElapsed?.hours | number : '2.'}} :
-          {{item.tracingTimeElapsed?.minutes | number : '2.'}} :
-          {{item.tracingTimeElapsed?.seconds | number : '2.'}}
+          {{item.tracingTimeElapsed?.minutes | number : '2.'}} 
+          <!-- : {{item.tracingTimeElapsed?.seconds | number : '2.'}} -->
         </div>
       </div>
     </div>
