:construction: Send function updated

--- a/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.html
@@ -554,11 +554,9 @@
               <mat-menu #rawMenu="matMenu">
                 <button
                   *ngIf="
-                    !(
-                      element.statusPresupuesto == 'PPTO. APROBADO' ||
-                      element.statusPresupuesto == 'PPTO. RECHAZADO' ||
-                      element.statusPresupuesto == 'CLIENTE INTERNO'
-                    )
+                    element.statusPresupuesto === 'PDTE. APROB.' ||
+                    element.statusPresupuesto === 'PPTO. PARALELO' ||
+                    element.statusPresupuesto === 'PPTO. MODIFICADO'
                   "
                   class="w3-small"
                   mat-menu-item
