--- a/src/app/main/pages/budgets/budgets/budgets-summary/dialogs/budgets-summary-send-dialog/budgets-summary-send-dialog.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/dialogs/budgets-summary-send-dialog/budgets-summary-send-dialog.component.scss
@@ -48,6 +48,15 @@
       display: flex;
       flex-direction: column;
       margin-bottom: 10px;
+
+      .file-send {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: fit-content;
+      }
+
       p {
         margin: 0;
         color: #0064ea;
