🔨 Fix Dialog de talleres #HU13

--- a/src/app/main/pages/quality/configurations/configurations.component.html
+++ b/src/app/main/pages/quality/configurations/configurations.component.html
@@ -7,8 +7,7 @@
     </div>
     <mat-divider></mat-divider>
     <div class="container-settings" *ngIf="authService.uiConfig.quality.configuration.panel.lists">
-        <mat-expansion-panel class="container-settings__color-expantion" [expanded]="step === 1" (opened)="setStep(1)"
-            hideToggle>
+        <mat-expansion-panel class="container-settings__color-expantion" [expanded]="step === 1" (opened)="setStep(1)" hideToggle>
             <mat-expansion-panel-header style="height: 58px;">
                 <mat-panel-title class="container-settings__header-title">
                     Envío de correos
@@ -28,9 +27,7 @@
                                             <p class="container-diffusion__title--name">
                                                 Lista de {{broadcast.name}}
                                             </p>
-                                            <button mat-icon-button aria-label="deletelistResult"
-                                                class="container-diffusion__btn"
-                                                (click)="deleteListBroadcast(broadcast,i)">
+                                            <button mat-icon-button aria-label="deletelistResult" class="container-diffusion__btn" (click)="deleteListBroadcast(broadcast,i)">
                                                 <mat-icon style="color: #FF2D2D; ">delete</mat-icon>
                                             </button>
                                         </div>
@@ -44,13 +41,8 @@
 
                                     <mat-form-field>
                                         <mat-label>Escribir</mat-label>
-                                        <input type="text" matInput placeholder="Escribir"
-                                            [formControl]="broadcastFormArray.controls[i]"
-                                            (keyup.enter)="addListDiffusion(broadcast,i)" [errorStateMatcher]="matcher"
-                                            autocomplete="off">
-                                        <button mat-button *ngIf="broadcastFormArray.controls[i].errors" matSuffix
-                                            mat-icon-button aria-label="clearResult"
-                                            (click)="broadcastFormArray.controls[i].reset()">
+                                        <input type="text" matInput placeholder="Escribir" [formControl]="broadcastFormArray.controls[i]" (keyup.enter)="addListDiffusion(broadcast,i)" [errorStateMatcher]="matcher" autocomplete="off">
+                                        <button mat-button *ngIf="broadcastFormArray.controls[i].errors" matSuffix mat-icon-button aria-label="clearResult" (click)="broadcastFormArray.controls[i].reset()">
                                             <mat-icon>close</mat-icon>
                                         </button>
                                         <mat-hint>Presione ENTER para agregar</mat-hint>
@@ -78,8 +70,7 @@
                     </div>
                 </div>
 
-                <button type="button" aria-label="saveDataDifusion" mat-button class="container-settings__btn-add"
-                    style="margin-top: 50px;" (click)="addBroadcast()">
+                <button type="button" aria-label="saveDataDifusion" mat-button class="container-settings__btn-add" style="margin-top: 50px;" (click)="addBroadcast()">
                     AGREGAR
                 </button>
 
@@ -90,8 +81,7 @@
 
 
     <div class="container-settings" *ngIf="authService.uiConfig.quality.configuration.panel.broadcast">
-        <mat-expansion-panel class="container-settings__color-expantion" [expanded]="step === 2" (opened)="setStep(2)"
-            hideToggle>
+        <mat-expansion-panel class="container-settings__color-expantion" [expanded]="step === 2" (opened)="setStep(2)" hideToggle>
             <mat-expansion-panel-header style="height: 58px;">
                 <mat-panel-title class="container-settings__header-title">
                     Listas
@@ -114,8 +104,7 @@
 
                                     <mat-form-field class="container-expansion2__form--input" appearance="outline">
                                         <mat-label>Area responsable</mat-label>
-                                        <input type="text" autocomplete="off" formControlName="name"
-                                            placeholder="Escribe..." matInput />
+                                        <input type="text" autocomplete="off" formControlName="name" placeholder="Escribe..." matInput />
                                         <mat-error *ngIf="areaForm.controls['name'].errors">
                                             Campo <strong>requerido.</strong>
                                         </mat-error>
@@ -123,15 +112,13 @@
 
                                     <mat-form-field class="container-expansion2__form--input" appearance="outline">
                                         <mat-label>Correo</mat-label>
-                                        <input type="text" autocomplete="off" formControlName="email"
-                                            placeholder="Escribe..." matInput />
+                                        <input type="text" autocomplete="off" formControlName="email" placeholder="Escribe..." matInput />
                                         <mat-error *ngIf="areaForm.controls['email'].errors">
                                             Campo <strong>requerido.</strong>
                                         </mat-error>
                                     </mat-form-field>
 
-                                    <button type="submit" aria-label="saveDataDifusion" mat-button
-                                        class="container-expansion2__form--btn" (click)="saveResponsibleArea()">
+                                    <button type="submit" aria-label="saveDataDifusion" mat-button class="container-expansion2__form--btn" (click)="saveResponsibleArea()">
                                         GUARDAR
                                     </button>
 
@@ -144,17 +131,15 @@
                                     <table mat-table [dataSource]="historyMobilDataSource" class="mat-elevation-z8">
 
                                         <ng-container matColumnDef="name">
-                                            <th mat-header-cell *matHeaderCellDef class="table__cell theader">Area
-                                                responsable</th>
-                                            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.name ?
-                                                element.name : '---'}}
+                                            <th mat-header-cell *matHeaderCellDef class="table__cell theader">Area responsable
+                                            </th>
+                                            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.name ? element.name : '---'}}
                                             </td>
                                         </ng-container>
 
                                         <ng-container matColumnDef="email">
                                             <th mat-header-cell *matHeaderCellDef class="table__cell theader">Email</th>
-                                            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.email
-                                                ? element.email : '---'}}
+                                            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.email ? element.email : '---'}}
                                             </td>
                                         </ng-container>
 
@@ -163,8 +148,7 @@
                                                 Accion
                                             </th>
                                             <td mat-cell *matCellDef="let element" class="table__cell">
-                                                <button mat-icon-button aria-label="deletelistResult"
-                                                    (click)="deleteListResponsibleArea(element)">
+                                                <button mat-icon-button aria-label="deletelistResult" (click)="deleteListResponsibleArea(element)">
                                                     <mat-icon style="color: #828282">delete</mat-icon>
                                                 </button>
                                             </td>
@@ -175,8 +159,7 @@
                                     </table>
 
                                 </div>
-                                <mat-paginator #historyMobilPaginator class="ms-paginator"
-                                    [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+                                <mat-paginator #historyMobilPaginator class="ms-paginator" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
                                 </mat-paginator>
                             </div>
 
@@ -199,8 +182,7 @@
 
                                     <mat-form-field class="container-expansion2__form--input" appearance="outline">
                                         <mat-label>Taller</mat-label>
-                                        <input type="text" formControlName="workShopName" placeholder="Escribe..."
-                                            matInput onkeypress="return event.charCode !== 13" />
+                                        <input type="text" formControlName="workShopName" placeholder="Escribe..." matInput onkeypress="return event.charCode !== 13" />
                                         <mat-error *ngIf="workShopForm.controls['workShopName'].errors">
                                             Campo <strong>requerido.</strong>
                                         </mat-error>
@@ -212,9 +194,7 @@
                                         <mat-card-header class="container-expansion1__content-card--header">
                                             <mat-form-field>
                                                 <mat-label>Escribir</mat-label>
-                                                <input type="text" matInput placeholder="Escribir"
-                                                    formControlName="workShopProgress"
-                                                    (keyup.enter)="addWorkShopProgress()">
+                                                <input type="text" matInput placeholder="Escribir" formControlName="workShopProgress" (keyup.enter)="addWorkShopProgress()">
                                                 <button mat-button matSuffix mat-icon-button>
                                                     <mat-icon (click)="resetworkShopProgress()">close</mat-icon>
                                                 </button>
@@ -225,8 +205,7 @@
                                             </mat-form-field>
                                             <div>
                                                 <mat-card-content class="container-expansion1__content-card-content">
-                                                    <div role="list"
-                                                        *ngFor="let item of workShopProgressArray ;let j=index">
+                                                    <div role="list" *ngFor="let item of workShopProgressArray ;let j=index">
                                                         <div class="item-list">
                                                             <span>{{item}}</span>
                                                             <span>
@@ -244,8 +223,7 @@
                                     </mat-card>
 
 
-                                    <button type="submit" mat-button class="container-expansion2__form--btn"
-                                        (click)="saveSubmitWorkShopForm()">
+                                    <button type="submit" mat-button class="container-expansion2__form--btn" (click)="saveSubmitWorkShopForm()">
                                         GUARDAR
                                     </button>
 
@@ -286,9 +264,9 @@
                                             </th>
                                             <td mat-cell *matCellDef="let element" class="table__cell">
                                                 <button mat-icon-button>
-                                                    <mat-icon style="color: #828282">edit</mat-icon>
+                                                    <mat-icon style="color: #828282" (click)="editWorkShop(elemnt)">edit</mat-icon>
                                                 </button>
-                                                <button mat-icon-button>
+                                                <button mat-icon-button (click)="deleteWorkshop(element)">
                                                     <mat-icon style="color: #828282">delete</mat-icon>
                                                 </button>
                                             </td>
@@ -299,8 +277,7 @@
                                     </table>
 
                                 </div>
-                                <mat-paginator #workShopPaginator class="ms-paginator" [pageSizeOptions]="[5, 10, 20]"
-                                    showFirstLastButtons>
+                                <mat-paginator #workShopPaginator class="ms-paginator" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
                                 </mat-paginator>
                             </div>
 
