--- a/src/app/main/pages/quality/analysis/results/results.component.html
+++ b/src/app/main/pages/quality/analysis/results/results.component.html
@@ -181,7 +181,7 @@
                         </td>
                     </ng-container>
 
-                    <tr mat-header-row *matHeaderRowDef="settingsDisplayedColumns; sticky"></tr>
+                    <tr mat-header-row *matHeaderRowDef="settingsDisplayedColumns; sticky: true"></tr>
                     <tr mat-row *matRowDef="let element; columns: settingsDisplayedColumns;"></tr>
 
                     <tr class="mat-row" *matNoDataRow>
