:construction: Finished send function in summary

--- a/src/app/main/pages/budgets/budgets/budgets-summary/dialogs/budgets-summary-send-dialog/budgets-summary-send-dialog.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/dialogs/budgets-summary-send-dialog/budgets-summary-send-dialog.component.html
@@ -257,9 +257,11 @@
       type="submit"
       mat-raised-button
       color="primary"
-      (click)="startUpload()"
+      (click)="send()"
       [disabled]="
-        form.invalid || emails.length === 0 || budgetsSent.length === 0
+        form.invalid ||
+        emails.length === 0 ||
+        (budgetsSent.length === 0 && budgetFilesList.length === 0)
       "
     >
       ENVIAR
