--- a/src/app/main/pages/quality/analysis/progress/dialogs/detail-external-dialog/detail-external-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/detail-external-dialog/detail-external-dialog.component.html
@@ -21,7 +21,7 @@
                 </p>
                 <p><span style="font-weight: bold;"> Tipo de evento :</span> {{data.eventType? data.eventType : ''}}</p>
                 <p><span style="font-weight: bold;"> Operación minera :</span> {{data.miningOperation ? data.miningOperation : ''}} </p>
-                <p><span style="font-weight: bold;"> Taller responsable :</span> {{data.workShopName? data.workShopName.workshopName : ''}}</p>
+                <p><span style="font-weight: bold;"> Taller responsable :</span> {{data.responsibleWorkshop? data.responsibleWorkshop.workshopName : ''}}</p>
                 <p><span style="font-weight: bold;"> Fecha :</span> {{data.createdAt ? ((data.createdAt['seconds'] * 1000) | date : 'dd/MM/yy - hh:mm:ss'): ''}}
                 </p>
 
