--- a/src/app/main/pages/quality/configurations/configurations.component.scss
+++ b/src/app/main/pages/quality/configurations/configurations.component.scss
@@ -51,6 +51,7 @@
         margin-left: 3.8%;
     }
 
+
     &__body{
         display: flex;
         
@@ -108,6 +109,14 @@
     }
     &__content-card-content {
         margin-bottom: 20px;
+    }
+}
+
+.header-list{
+    display: block;
+    &__title{
+        display: flex; 
+        justify-content: space-between;
     }
 }
 
